[project]
name = "llamaindex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "llama-index-core>=0.13.2",
    "llama-index-embeddings-ollama>=0.8.1",
    "llama-index-llms-ollama>=0.7.1",
    "llama-index-utils-workflow>=0.4.0",
    "llama-index-vector-stores-chroma>=0.5.0",
]
